Try to fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,12 @@ i {
 .btn-ghost:hover {
   color: #005e76;
   background-color: #8bc9d9;
-  border: 2px solid #005e76;
+  border: 2px solid #0084a6;
 }
 
 .nav a {
   text-decoration: none;
-  color: #0084a6;
+  color: #005e76;
   border-bottom: 2px solid #8bc9d9;
 }
 
@@ -33,6 +33,10 @@ i {
   border-color: #e2e2e2;
   border-style: solid;
   border-width: 2px 0;
+}
+
+p {
+  color: #000;
 }
 
 footer {
